app/rust/src/parser/coreth/snapshots/rslib__parser__coreth__native__tests__tx_eth_ui@erc20_simple_transfer_WETH.json.snap
---
source: src/parser/coreth/native.rs
expression: reduced
input_file: src/parser/coreth/eth_testvectors/erc20_simple_transfer_WETH.json
---
[
    "Chain ID": "43114",
    "ERC-20": "transfer",
    "To": "0x4dddfff0e3b478b1d03b3a1b5245ebcd3afa3b67",
    "Amount": "315.465795112885420032 WETH.e",
    "Contract": "0x49d5c2bdffac6ce2bfdb6640f4f80f226bc10bab",
    "Maximun Fee(GWEI)": "473244.45703512",
]
