app/rust/src/parser/coreth/snapshots/rslib__parser__coreth__native__tests__tx_eth_ui@erc20_simple_transfer_WETH_e.json.snap
---
source: src/parser/coreth/native.rs
expression: reduced
input_file: src/parser/coreth/eth_testvectors/erc20_simple_transfer_WETH_e.json
---
[
    "Chain ID": "43114",
    "ERC-20": "transfer",
    "To": "0xed17e0aa0a22ce8eef2f6bdd1a76d79bff5f23f9",
    "Amount": "106.408710757131534336 WETH.e",
    "Contract": "0x49d5c2bdffac6ce2bfdb6640f4f80f226bc10bab",
    "Maximun Fee(GWEI)": "776190.302612778",
]
