app/rust/src/parser/coreth/snapshots/rslib__parser__coreth__native__tests__tx_eth_ui@erc20_simple_transfer_ZRX_e.json.snap
---
source: src/parser/coreth/native.rs
expression: reduced
input_file: src/parser/coreth/eth_testvectors/erc20_simple_transfer_ZRX_e.json
---
[
    "Chain ID": "43114",
    "ERC-20": "transfer",
    "To": "0xc5e39f04b9f07440f2db948b74bfa8dffd983fb3",
    "Amount": "14.818045125323698176 ZRX.e",
    "Contract": "0x596fa47043f99a4e0f122243b841e55375cde0d2",
    "Maximun Fee(GWEI)": "996773.650880301",
]
