app/rust/src/parser/coreth/snapshots/rslib__parser__coreth__native__tests__tx_eth_ui@legacy_contract_call_foreign.json.snap
---
source: src/parser/coreth/native.rs
expression: reduced
input_file: src/parser/coreth/eth_testvectors/legacy_contract_call_foreign.json
---
[
    "Chain ID": "324846",
    "Contract": "Call",
    "Transfer": "??? 14.12582170622427136",
    "To": "0xcccccccccccccccccccccccccccccccccccccccc",
    "Contract Data: ": "0x7f7465737432000000000000000000000000000000000000000000000000...",
    "Maximun Fee(GWEI)": "100000000",
]
