app/rust/src/parser/coreth/snapshots/rslib__parser__coreth__native__tests__tx_eth_ui@legacy_simple_transfer.json.snap
---
source: src/parser/coreth/native.rs
expression: reduced
input_file: src/parser/coreth/eth_testvectors/legacy_simple_transfer.json
---
[
    "Chain ID": "2",
    "Transfer": "??? 14.12582170622427136",
    "To": "0xcccccccccccccccccccccccccccccccccccccccc",
    "Fee(GWEI)": "100000000",
]
